import { NativeStackScreenProps } from "@react-navigation/native-stack";
import { useColorScheme } from "nativewind";
import React, { FC, useCallback, useEffect } from "react";
import { Animated, Text, View } from "react-native";
import { useSafeAreaInsets } from "react-native-safe-area-context";
import { create } from "zustand";
import { Pressable } from "@breathly/common/pressable";
import { RootStackParamList } from "@breathly/core/navigator";
import { colors } from "@breathly/design/colors";
import { PlanetsBackground } from "@breathly/screens/home-screen/planets-background";
import { StarsBackground } from "@breathly/screens/home-screen/stars-background";

const displayTitleTextStyle = {
  includeFontPadding: true,
  lineHeight: 80,
  paddingBottom: 8,
  textAlignVertical: "center" as const,
};

export const useHomeScreenStatusStore = create<{
  isHomeScreenReady: boolean;
  markHomeScreenAsReady: () => unknown;
}>((set) => ({
  isHomeScreenReady: false,
  markHomeScreenAsReady: () => set(() => ({ isHomeScreenReady: true })),
}));

export const HomeScreen: FC<NativeStackScreenProps<RootStackParamList, "Home">> = ({
  navigation,
}) => {
  const { colorScheme } = useColorScheme();
  const { isHomeScreenReady, markHomeScreenAsReady } = useHomeScreenStatusStore();
  const insets = useSafeAreaInsets();
  const handleStartButtonPress = () => {
    navigation.navigate("Exercise");
  };
  const handleCustomizeButtonPress = () => {
    navigation.navigate("Settings");
  };

  // To avoid weird flashes we store a flag to track if the home screen has been fully rendered.
  // This flag is used to tell to `SplashScreenManager` when to hide the splash screen.
  useEffect(() => {
    // We run this only in light mode, because for dark mode we'll mark the flag only after
    // the stars background has been loaded.
    if (colorScheme === "light" && !isHomeScreenReady) {
      markHomeScreenAsReady();
    }
  }, [colorScheme, isHomeScreenReady, markHomeScreenAsReady]);

  const handleStarsBackgroundImageLoaded = useCallback(() => {
    if (!isHomeScreenReady) {
      markHomeScreenAsReady();
    }
  }, [isHomeScreenReady, markHomeScreenAsReady]);

  return (
    <Animated.View
      className="flex-1 items-center justify-between"
      testID="home.screen"
      style={{
        // Paddings to handle safe area
        paddingTop: insets.top,
        paddingBottom: insets.bottom,
        paddingLeft: insets.left,
        paddingRight: insets.right,
      }}
    >
      {colorScheme === "dark" && (
        <StarsBackground onImageLoaded={handleStarsBackgroundImageLoaded} />
      )}
      {colorScheme === "light" && <PlanetsBackground />}

      <View className="mx-12 flex-1 items-center justify-end">
        <Animated.Text
          className="font-breathly-serif-semibold text-5xl text-slate-800 dark:text-white"
          style={displayTitleTextStyle}
        >
          Breathly
        </Animated.Text>
        <Animated.Text className="mb-8 text-center font-breathly-regular text-lg font-light text-slate-500">
          Relax, focus on your breath, and find your inner peace.
        </Animated.Text>
      </View>
      <Pressable
        className="w-72 max-w-xs items-center rounded-lg px-4 py-2"
        style={{ backgroundColor: colors.pastel["orange-light"] }}
        onPress={handleStartButtonPress}
        testID="home.start-session"
        accessibilityRole="button"
      >
        <Text
          adjustsFontSizeToFit
          className="w-full py-1 text-center font-breathly-regular text-lg text-slate-800"
          maxFontSizeMultiplier={1.2}
          minimumFontScale={0.85}
          numberOfLines={1}
        >
          Start a new session
        </Text>
      </Pressable>
      <Animated.Text className="bg-red my-2 text-center font-breathly-regular text-lg font-light text-slate-500">
        or
      </Animated.Text>
      <Pressable
        className="mb-20 w-72 max-w-xs items-center rounded-lg px-4 py-2"
        style={{ backgroundColor: colors.pastel["gray-light"] }}
        onPress={handleCustomizeButtonPress}
        testID="home.customize"
        accessibilityRole="button"
      >
        <Text
          adjustsFontSizeToFit
          className="w-full py-1 text-center font-breathly-regular text-lg text-slate-800"
          maxFontSizeMultiplier={1.2}
          minimumFontScale={0.85}
          numberOfLines={1}
        >
          Customize the experience
        </Text>
      </Pressable>
    </Animated.View>
  );
};
