...

  return (
    <Animated.View className="mt-4" style={containerAnimatedStyle}>
      <Animated.Text
        className="text-center text-2xl text-slate-800 dark:text-white"
        style={{ fontVariant: ["tabular-nums"] }}
        testID="exercise.timer"
      >
        {timerText}
      </Animated.Text>
    </Animated.View>
  );
};
...
